--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     		<div data-role="header">
     			<a href="#home" data-icon="home" data-iconpos="notext">Home</a>
     			<h1>Notebook</h1>
+                <a href="shake.html">shaking</a>
     		</div>
 
     		<div data-role="content">
